--- a/ui/src/scss/_vars.scss
+++ b/ui/src/scss/_vars.scss
@@ -1,9 +1,11 @@
 :root {
-    --baseFontFamily: 'Source Sans Pro', sans-serif, emoji;
+    /* --baseFontFamily: 'Source Sans Pro', sans-serif, emoji; */
+    --baseFontFamily: 'Open Sans', sans-serif, emoji;
     --monospaceFontFamily: 'Ubuntu Mono', monospace, emoji;
     --iconFontFamily: 'remixicon';
 
     --txtPrimaryColor:  #16161a;
+    /* --txtPrimaryColor:  #062e47; */
     --txtHintColor:     #666f75;
     --txtDisabledColor: #a0a6ac;
 
