--- a/ui/src/scss/_overlay_panel.scss
+++ b/ui/src/scss/_overlay_panel.scss
@@ -8,6 +8,7 @@
     flex-direction: column;
     align-self: flex-end;
     margin-left: auto; // push to right edge
+    margin: 0 auto;
     background: var(--baseColor);
     height: 100%;
     width: 580px;
