--- a/ui/src/scss/_layout.scss
+++ b/ui/src/scss/_layout.scss
@@ -58,7 +58,7 @@
     flex-direction: column;
     align-items: center;
     width: var(--appSidebarWidth);
-    width: 65px;
+    width: 58px;
     padding: var(--smSpacing) 0px var(--smSpacing);
     background: var(--baseColor);
     border-right: 1px solid var(--baseAlt2Color);
@@ -97,7 +97,7 @@
 // -------------------------------------------------------------------
 
 .page-sidebar {
-    --sidebarListItemMargin: 10px;
+    --sidebarListItemMargin: 3px;
 
     position: relative;
     z-index: 0;
@@ -112,6 +112,7 @@
     overflow-y: auto;
     background: var(--baseColor);
     padding: calc(var(--baseSpacing) - 5px) 0 var(--smSpacing);
+    padding: 5px 0;
     border-right: 1px solid var(--baseAlt2Color);
     & > * {
         padding: 0 var(--xsSpacing);
@@ -138,16 +139,20 @@
         margin: 0 0 var(--xsSpacing);
         color: var(--txtHintColor);
         opacity: 0.7;
+        padding: 0;
+        margin: 0;
+        --hPadding: 5px;
         transition: opacity var(--baseAnimationSpeed),
                     color var(--baseAnimationSpeed);
         input {
             border: 0;
+            padding-right: 16px;
             background: var(--baseColor);
             transition: box-shadow var(--baseAnimationSpeed),
                         background var(--baseAnimationSpeed);
         }
         .btn-clear {
-            margin-right: -8px;
+            margin-right: -6px;
         }
         &:hover,
         &:focus-within,
@@ -183,13 +188,15 @@
         align-items: center;
         column-gap: 10px;
         margin: var(--sidebarListItemMargin) 0;
-        padding: 3px 10px;
-        font-size: var(--xlFontSize);
+        padding: 0px 10px;
+        font-size: 14px; // can be --baseFontSize as it's 14.5
         min-height: var(--btnHeight);
         min-width: 0;
         color: var(--txtHintColor);
         border-radius: var(--baseRadius);
         user-select: none;
+        font-size: 13px;
+        margin: 3px 0;
         transition: background var(--baseAnimationSpeed),
                     color var(--baseAnimationSpeed);
         i {
