small design fix for search input

--- a/ui/src/scss/_form.scss
+++ b/ui/src/scss/_form.scss
@@ -554,7 +554,8 @@ select {
             margin-right: -5px;
         }
         &:not(.prefix) ~ %input {
-            padding-right: 30px;
+            padding-right: 20px;
+            font-size: 13px;
         }
         &.prefix {
             right: auto;
